SERVER-17117 propagate kill notifications to CachedPlanStage